[package]
name = "rusty_barnacle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtmpl = "0.7.1"
gtmpl_derive = "0.5.0"
gtmpl_value = "0.5.1"
mockall = "0.11.3"

[dev-dependencies]
mockall = "0.11.3"
